<resources>
    <string name="app_name">BedTime</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="settings_fragment_language_english" translatable="false">English</string>
    <string name="settings_fragment_language_chinese" translatable="false">简体中文</string>
    <string name="action_go_bed" translatable="false">com.celerysoft.bedtime.action.GO_BED</string>
    <string name="action_bed_time" translatable="false">com.celerysoft.bedTime.action.BED_TIME</string>
    <string name="shared_preferences_key_default" translatable="false">shared_preferences_key_default</string>
    <string name="shared_preferences_key_is_new_user" translatable="false">shared_preferences_key_is_new_user</string>
    <string name="shared_preferences_key_wakeup_time_monday_hour" translatable="false">shared_preferences_key_wakeup_time_monday_hour</string>
    <string name="shared_preferences_key_wakeup_time_monday_minute" translatable="false">shared_preferences_key_wakeup_time_monday_minute</string>
    <string name="shared_preferences_key_wakeup_time_tuesday_hour" translatable="false">shared_preferences_key_wakeup_time_tuesday_hour</string>
    <string name="shared_preferences_key_wakeup_time_tuesday_minute" translatable="false">shared_preferences_key_wakeup_time_tuesday_minute</string>
    <string name="shared_preferences_key_wakeup_time_wednesday_hour" translatable="false">shared_preferences_key_wakeup_time_wednesday_hour</string>
    <string name="shared_preferences_key_wakeup_time_wednesday_minute" translatable="false">shared_preferences_key_wakeup_time_wednesday_minute</string>
    <string name="shared_preferences_key_wakeup_time_thursday_hour" translatable="false">shared_preferences_key_wakeup_time_thursday_hour</string>
    <string name="shared_preferences_key_wakeup_time_thursday_minute" translatable="false">shared_preferences_key_wakeup_time_thursday_minute</string>
    <string name="shared_preferences_key_wakeup_time_friday_hour" translatable="false">shared_preferences_key_wakeup_time_friday_hour</string>
    <string name="shared_preferences_key_wakeup_time_friday_minute" translatable="false">shared_preferences_key_wakeup_time_friday_minute</string>
    <string name="shared_preferences_key_wakeup_time_saturday_hour" translatable="false">shared_preferences_key_wakeup_time_saturday_hour</string>
    <string name="shared_preferences_key_wakeup_time_saturday_minute" translatable="false">shared_preferences_key_wakeup_time_saturday_minute</string>
    <string name="shared_preferences_key_wakeup_time_sunday_hour" translatable="false">shared_preferences_key_wakeup_time_sunday_hour</string>
    <string name="shared_preferences_key_wakeup_time_sunday_minute" translatable="false">shared_preferences_key_wakeup_time_sunday_minute</string>
    <string name="shared_preferences_key_bed_time_monday_hour" translatable="false">shared_preferences_key_bed_time_monday_hour</string>
    <string name="shared_preferences_key_bed_time_monday_minute" translatable="false">shared_preferences_key_bed_time_monday_minute</string>
    <string name="shared_preferences_key_bed_time_tuesday_hour" translatable="false">shared_preferences_key_bed_time_tuesday_hour</string>
    <string name="shared_preferences_key_bed_time_tuesday_minute" translatable="false">shared_preferences_key_bed_time_tuesday_minute</string>
    <string name="shared_preferences_key_bed_time_wednesday_hour" translatable="false">shared_preferences_key_bed_time_wednesday_hour</string>
    <string name="shared_preferences_key_bed_time_wednesday_minute" translatable="false">shared_preferences_key_bed_time_wednesday_minute</string>
    <string name="shared_preferences_key_bed_time_thursday_hour" translatable="false">shared_preferences_key_bed_time_thursday_hour</string>
    <string name="shared_preferences_key_bed_time_thursday_minute" translatable="false">shared_preferences_key_bed_time_thursday_minute</string>
    <string name="shared_preferences_key_bed_time_friday_hour" translatable="false">shared_preferences_key_bed_time_friday_hour</string>
    <string name="shared_preferences_key_bed_time_friday_minute" translatable="false">shared_preferences_key_bed_time_friday_minute</string>
    <string name="shared_preferences_key_bed_time_saturday_hour" translatable="false">shared_preferences_key_bed_time_saturday_hour</string>
    <string name="shared_preferences_key_bed_time_saturday_minute" translatable="false">shared_preferences_key_bed_time_saturday_minute</string>
    <string name="shared_preferences_key_bed_time_sunday_hour" translatable="false">shared_preferences_key_bed_time_sunday_hour</string>
    <string name="shared_preferences_key_bed_time_sunday_minute" translatable="false">shared_preferences_key_bed_time_sunday_minute</string>
    <string name="shared_preferences_key_open_notification" translatable="false">shared_preferences_key_open_notification</string>
    <string name="shared_preferences_key_settings_language" translatable="false">shared_preferences_key_settings_language</string>
    <string name="shared_preferences_key_settings_sound" translatable="false">shared_preferences_key_settings_sound</string>
    <string name="shared_preferences_key_settings_24_hour_time" translatable="false">shared_preferences_key_settings_24_hour_time</string>
    <string name="shared_preferences_key_personal_information_nickname" translatable="false">shared_preferences_key_personal_information_nickname</string>
    <string name="shared_preferences_key_personal_information_age" translatable="false">shared_preferences_key_personal_information_age</string>
    <string name="shared_preferences_key_personal_information_sleep_hour" translatable="false">shared_preferences_key_personal_information_sleep_hour</string>
    <string name="shared_preferences_key_personal_information_sleep_minute" translatable="false">shared_preferences_key_personal_information_sleep_minute</string>
    <string name="shortcut_set_wakeup_time_short_label">Set wakeup time</string>
    <string name="shortcut_set_wakeup_time_long_label">Set wakeup time</string>
    <string name="shortcut_set_wakeup_time_disabled_message">Set wakeup time is disabled</string>
    <string name="got_it">Got it</string>
    <string name="notification_it_is_bed_time_title">Good night</string>
    <string name="notification_it_is_bed_time">Hope you have a nice dream, </string>
    <string name="notification_bed_time_in_30_minutes_title">Get ready to bed</string>
    <string name="notification_bed_time_in_30_minutes">It\'s about 30 minutes until bedtime, </string>
    <string name="personal_information_title">Personal Information</string>
    <string name="personal_information_tv_nickname_label_text">Nickname</string>
    <string name="personal_information_tv_age_label_text">Age</string>
    <string name="personal_information_tv_sleep_time_label_text">Sleep Time</string>
    <string name="personal_information_hour_text">hour</string>
    <string name="personal_information_hours_text">hours</string>
    <string name="personal_information_minute_text">minute</string>
    <string name="personal_information_minutes_text">minutes</string>
    <string name="personal_information_avatar_dialog_camera">Camera</string>
    <string name="personal_information_avatar_dialog_gallery">Gallery</string>
    <string name="personal_information_avatar_modify_success">Modify avatar successfully</string>
    <string name="action_about_us">About us</string>
    <string name="main_snack_bar_text">Press back button again to exit BedTime</string>
    <string name="main_snack_bar_action_text">EXIT</string>
    <string name="main_nav_home_text">Home</string>
    <string name="main_nav_bedtime_text">BedTime</string>
    <string name="main_nav_settings_text">Settings</string>
    <string name="main_nav_communicate_text">Communicate</string>
    <string name="main_nav_share_text">Share</string>
    <string name="main_nav_feedback_text">Feedback</string>
    <string name="main_could_not_send_feedback_dialog_message">"Could not find a e-mail client in your device. if you want to send any feedback, please send to \ncelerysoft@gmail.com"</string>
    <string name="main_could_not_send_feedback_dialog_btn_text">Copy E-mail address to clipboard</string>
    <string name="main_tv_sleep_time_text">Sleep Time: </string>
    <string name="main_dialog_welcome_title">Welcome to BedTime</string>
    <string name="main_dialog_welcome_message">This is your first time to BedTime, so you need to set up some personal information for getting a better service. We will not collect this information of all times.</string>
    <string name="main_dialog_welcome_positive_btn_text">Go and Set</string>
    <string name="main_snack_bar_share_success">Shared succeed</string>
    <string name="main_snack_bar_share_fail">Shared failed</string>
    <string name="main_snack_bar_share_cancel">Shared cancel</string>
    <string name="main_share_title">Guess you need a assistant to warn you go bed</string>
    <string name="main_share_message">Set your wakeup time and tell us your age, we will calculate your bedtime and warn you 30 minutes before it</string>
    <string name="main_dialog_share_title">Share to</string>
    <string name="main_dialog_share_wechat">Wechat</string>
    <string name="main_dialog_share_wechat_timeline">Wechat Timeline</string>
    <string name="main_dialog_share_qq">QQ</string>
    <string name="main_dialog_share_qzone">Q-Zone</string>
    <string name="main_actionbar_title">Home</string>
    <string name="main_switch_title">Notify Going Bed</string>
    <string name="main_count_down_action_go_bed">Going Bed</string>
    <string name="main_count_down_action_get_up">Getting Up</string>
    <string name="main_tv_until_text">Until</string>
    <string name="main_tv_hour_text">Hour</string>
    <string name="main_tv_hours_text">Hours</string>
    <string name="main_tv_minute_text">Minute</string>
    <string name="main_tv_minutes_text">Minutes</string>
    <string name="bedtime_actionbar_title">When To Bed</string>
    <string name="bedtime_title">Wakeup times</string>
    <string name="bedtime_help_dialog_title">About wakeup time</string>
    <string name="bedtime_help_dialog_message">Tap item to set up every wake-up time, then we can calculate your bed-time infer to your wake-up time and sleep time. And warn you on 30 minutes before your bed-time</string>
    <string name="bedtime_monday">Monday</string>
    <string name="bedtime_tuesday">Tuesday</string>
    <string name="bedtime_wednesday">Wednesday</string>
    <string name="bedtime_thursday">Thursday</string>
    <string name="bedtime_friday">Friday</string>
    <string name="bedtime_saturday">Saturday</string>
    <string name="bedtime_sunday">Sunday</string>
    <string name="bedtime_today">Today</string>
    <string name="bedtime_tomorrow">Tomorrow</string>
    <string name="settings_actionbar_title">Settings</string>
    <string name="settings_fragment_language_follow_system">Follow system settings</string>
    <string name="settings_fragment_sound_use_default">Use BedTime Default</string>
    <string name="settings_fragment_category_date_and_time">Date &amp; Time</string>
    <string name="settings_fragment_tv_time_format_text">24-Hour Time</string>
    <string name="settings_fragment_tv_time_format_desc_text_24">e.g. 16:32</string>
    <string name="settings_fragment_tv_time_format_desc_text_12">e.g. 4:32 PM</string>
    <string name="settings_fragment_category_general">General</string>
    <string name="settings_fragment_tv_language_text">Language</string>
    <string name="settings_fragment_tv_sound_text">Sound</string>
    <string name="settings_fragment_tv_personal_information_text">Personal Information</string>
    <string name="settings_fragment_tv_current_version_text">Current Version</string>
</resources>