<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home_black"
            android:title="@string/main_nav_home_text"
            android:checked="true"/>
        <item
            android:id="@+id/nav_bedtime"
            android:icon="@drawable/ic_alarm_black"
            android:title="@string/main_nav_bedtime_text"/>

    </group>

    <item android:title="@string/main_nav_communicate_text">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/main_nav_share_text"/>
        </menu>
    </item>

    <group
        android:id="@+id/main_nav_group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/main_nav_settings_text"/>
        <item
            android:checkable="false"
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_email"
            android:title="@string/main_nav_feedback_text"/>
    </group>


</menu>