<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_header_height"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/colorPrimary"
        android:text="@string/settings_fragment_category_date_and_time"/>

    <RelativeLayout
        android:id="@+id/settings_fragment_time_format"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:clickable="true"
        style="@style/Base.Widget.AppCompat.Toolbar.Button.Navigation">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size_subheading"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/settings_fragment_tv_time_format_text"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/settings_fragment_tv_time_format_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size_body"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/settings_fragment_tv_time_format_desc_text_12"/>
        </LinearLayout>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/settings_fragment_switch_time_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"/>
    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_header_height"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/colorPrimary"
        android:text="@string/settings_fragment_category_general"/>

    <LinearLayout
        android:id="@+id/settings_fragment_language"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:clickable="true"
        style="@style/Base.Widget.AppCompat.Toolbar.Button.Navigation">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_subheading"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/settings_fragment_tv_language_text"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/settings_fragment_tv_language_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_body"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/settings_fragment_language_follow_system"/>
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/settings_fragment_personal_information"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_subheading"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/settings_fragment_tv_personal_information_text"
        android:clickable="true"
        style="@style/Base.Widget.AppCompat.Toolbar.Button.Navigation"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_settings_fragment_current_version"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/settings_fragment_tv_current_version_text"/>

</LinearLayout>