<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.main.view.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/personal_information_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/main_fragment_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main_app_bar"
        tools:context=".activity.main.view.MainActivity">

        <ImageView
            android:id="@+id/personal_information_iv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:src="@drawable/ic_avatar"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:id="@+id/personal_information_btn_nickname"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/selector_list_item">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:text="@string/personal_information_tv_nickname_label_text"
                android:textSize="@dimen/list_view_font_size"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center_vertical|start"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/personal_information_tv_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Celery"
                    android:textSize="@dimen/list_view_font_size"
                    android:textColor="@color/colorPrimaryText"
                    android:gravity="center_vertical|end"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/personal_information_et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:inputType="text"
                    android:visibility="gone"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/personal_information_btn_age"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/selector_list_item">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:text="@string/personal_information_tv_age_label_text"
                android:textSize="@dimen/list_view_font_size"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center_vertical|start"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/personal_information_tv_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="25"
                    android:textSize="@dimen/list_view_font_size"
                    android:textColor="@color/colorPrimaryText"
                    android:gravity="center_vertical|end"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/personal_information_et_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:singleLine="true"
                    android:inputType="number"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/personal_information_btn_sleep_time"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/selector_list_item">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:text="@string/personal_information_tv_sleep_time_label_text"
                android:textSize="@dimen/list_view_font_size"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center_vertical|start"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/personal_information_tv_sleep_time"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="match_parent"
                android:text="7hours 30minutes"
                android:textSize="@dimen/list_view_font_size"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center_vertical|end"/>

        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/personal_information_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin_in_coordinator_layout"
        android:src="@drawable/ic_content_save"
        android:visibility="gone"
        app:borderWidth="0dp"/>

</android.support.design.widget.CoordinatorLayout>